Made some improvements to app.css and fixed spacing in attitude.js

--- a/front-end/app/app.css
+++ b/front-end/app/app.css
@@ -40,6 +40,7 @@
      background-color: #6B8B3D;
  }
 
+//
 #iframe {
     grid-column: 1/2;
     grid-row: 2/5;
@@ -56,6 +57,16 @@
     width: 100%;
     height: 600px;
     background-color: black;
+    grid-column: 1/2;
+    grid-row: 2/5;
+}
+
+#video2 {
+    width: 100%;
+    height: 600px;
+    background-color: black;
+    grid-column: 1/2;
+    grid-row: 2/5;
 }
 
 .efv-container {
@@ -66,7 +77,7 @@
 
 .cesiumViewer {
     width: 100%;
-    height: 100%;
+    height: 400px;
 }
 
 .attitude-container {
